Add refresh, and private routes and create requires auth deocrator
